--- a/index.html
+++ b/index.html
@@ -37,25 +37,25 @@
                 </div> -->
          
                 <div class="flex-item"> 
-                    <a id="demon2" href="https://zhihengchen.github.io/wcc-week2/">
+                    <a id="demon2" href="https://zhihengchen.github.io/work1/">
                         <h4>1. Simple Responsive p5 Code Example </h4>
                     </a>
                 </div>
 
                 <div class="flex-item"> 
-                    <a id="nike" href="https://github.com/ZhihengChen/wcc-week3">
+                    <a id="nike" href="https://zhihengchen.github.io/work2/">
                         <h4>2.Make or Scrape</h4>
                     </a>
                 </div>
 
                 <div class="flex-item"> 
-                    <a id="week4" href="https://zhihengchen.github.io/wcc-week4/">
+                    <a id="week4" href="https://zhihengchen.github.io/work3/">
                         <h4>3.DIY Text Generators</h4>
                     </a>
                 </div>
 
                 <div class="flex-item"> 
-                    <a id="final" href="https://zhihengchen.github.io/final-project-documentation/">
+                    <a id="final" href="https://zhihengchen.github.io/work4/">
                         <h4>4.Final Project</h4>
                     </a>
                 </div>
