--- a/index.html
+++ b/index.html
@@ -37,26 +37,26 @@
                 </div> -->
          
                 <div class="flex-item"> 
-                    <a id="demon2" href="https://zhihengchen.github.io/work1/">
-                        <h4>1. Simple Responsive p5 Code Example </h4>
+                    <a id="final" href="https://zhihengchen.github.io/work1/">
+                        <h4>1. 黑白电视 </h4>
                     </a>
                 </div>
 
                 <div class="flex-item"> 
-                    <a id="nike" href="https://zhihengchen.github.io/work2/">
-                        <h4>2.Make or Scrape</h4>
+                    <a id="demon2" href="https://zhihengchen.github.io/work2/">
+                        <h4>2.恶魔之火</h4>
                     </a>
                 </div>
 
                 <div class="flex-item"> 
                     <a id="week4" href="https://zhihengchen.github.io/work3/">
-                        <h4>3.DIY Text Generators</h4>
+                        <h4>3.情绪手套</h4>
                     </a>
                 </div>
 
                 <div class="flex-item"> 
                     <a id="final" href="https://zhihengchen.github.io/work4/">
-                        <h4>4.Final Project</h4>
+                        <h4>4.多感官交互海报</h4>
                     </a>
                 </div>
 
