--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@
                     </a>
                 </div>
 
+                <div class="flex-item"> 
+                    <a id="finale" href="https://zhihengchen.github.io/work5/">
+                        <h4>5.回到现实</h4>
+                    </a>
+                </div>
+
                     <!-- Keep adding per week -->
 
                 
